# films-bot

./: Cargo.toml
src/: main.rs
src/app/: mod.rs  tmdb.rs
src/app/models/: mod.rs  movie.rs  serial.rs
src/app/storage/: mod.rs
src/app/telegram/: mod.rs
src/app/telegram/router/: callback_handlers.rs  command_handlers.rs  mod.rs  text_command_handlers.rs  text_handlers.rs
