[package]
name = "films-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
futures = "0.3.31"
mongodb = "3.2.5"
reqwest = { version = "0.12.23", features = ["gzip", "json", "cookies"] }
serde = { version = "1.0.219", features = ["derive"] }
teloxide = { version = "0.17.0", features = ["macros"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.7"
